# utfx

./: CMakeLists.txt  LICENSE  README.md  utfx.c  utfx.h
tests/: CMakeLists.txt  utfx_tests.c
